add current user endpoints to swagger docs
